@@ -37,7 +37,7 @@ Requirements
 
 ----
 
-1. Python 2.7+, 3.5+
+1. Python 3.5+
 2. Django 1.9+
 
 
