@@ -2,7 +2,3 @@ VERSION = (1, 1, 0)
 
 
 default_app_config = 'sitemessage.config.SitemessageConfig'
-
-# todo remove sent
-# todo notify unsent
-# todo mark to resend
