@@ -1,6 +1,6 @@
 from .base import MessageBase
 
-from django.utils.translation import ugettext as _
+from django.utils.translation import gettext as _
 
 
 class PlainTextMessage(MessageBase):
