@@ -8,7 +8,7 @@ def schedule_email(message, to, subject=None, sender=None, priority=None):
 
     :param dict, str message: str or dict: use str for simple text email;
         dict - to compile email from a template (default: `sitemessage/messages/email_html__smtp.html`).
-    :param list|str|unicode to: recipients addresses or Django User model heir instances
+    :param list|str to: recipients addresses or Django User model heir instances
     :param str subject: email subject
     :param User sender: User model heir instance
     :param int priority: number describing message priority. If set overrides priority provided with message type.
@@ -35,7 +35,7 @@ def schedule_jabber_message(message, to, sender=None, priority=None):
     """Schedules Jabber XMPP message for delivery.
 
     :param str message: text to send.
-    :param list|str|unicode to: recipients addresses or Django User model heir instances with `email` attributes.
+    :param list|str to: recipients addresses or Django User model heir instances with `email` attributes.
     :param User sender: User model heir instance
     :param int priority: number describing message priority. If set overrides priority provided with message type.
     """
@@ -46,7 +46,7 @@ def schedule_tweet(message, to='', sender=None, priority=None):
     """Schedules a Tweet for delivery.
 
     :param str message: text to send.
-    :param list|str|unicode to: recipients addresses or Django User model heir instances with `telegram` attributes.
+    :param list|str to: recipients addresses or Django User model heir instances with `telegram` attributes.
         If supplied tweets will be @-replies.
     :param User sender: User model heir instance
     :param int priority: number describing message priority. If set overrides priority provided with message type.
@@ -58,7 +58,7 @@ def schedule_telegram_message(message, to, sender=None, priority=None):
     """Schedules Telegram message for delivery.
 
     :param str message: text to send.
-    :param list|str|unicode to: recipients addresses or Django User model heir instances with `telegram` attributes.
+    :param list|str to: recipients addresses or Django User model heir instances with `telegram` attributes.
     :param User sender: User model heir instance
     :param int priority: number describing message priority. If set overrides priority provided with message type.
     """
@@ -79,7 +79,7 @@ def schedule_vkontakte_message(message, to, sender=None, priority=None):
     """Schedules VKontakte message for delivery.
 
     :param str message: text or URL to publish on wall.
-    :param list|str|unicode to: recipients addresses or Django User model heir instances with `vk` attributes.
+    :param list|str to: recipients addresses or Django User model heir instances with `vk` attributes.
     :param User sender: User model heir instance
     :param int priority: number describing message priority. If set overrides priority provided with message type.
     """
