@@ -1,5 +1,3 @@
-#! -*- encoding: utf-8 -*-
-from __future__ import unicode_literals
 from datetime import timedelta
 from django.utils import timezone
 
